# MusicAgent

./: .env.example  README.md  mcp_config.json  mcp_server.py  pyproject.toml  requirements.txt  setup.py
docs/: MCP_SERVER_GUIDE.md
examples/: artist_search.py  basic_usage.py
mcp_server/: README.md  discogs_server.py
plans/: PROJECT_SUMMARY.md  discogs_api_architecture.md  example_usage.md  exporters_and_testing.md  implementation_guide.md  implementation_specifications.md
src/musicagent/: __init__.py
src/musicagent/client/: __init__.py  http_client.py  request_builder.py
src/musicagent/config/: __init__.py  settings.py
src/musicagent/exceptions/: __init__.py  api_exceptions.py
src/musicagent/models/: __init__.py  base.py
src/musicagent/output/: __init__.py
src/musicagent/utils/: __init__.py  logger.py  rate_limiter.py  retry_handler.py
